[package]
name = "one_crl_to_cert_storage"
version = "0.1.0"
authors = ["Christopher Henderson <chris@chenderson.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.10"
lmdb-rkv = "0.11"
rkv = "^0.9"
error-chain = "0.12.1"
clap = "2.33.0"
reqwest = "0.9.22"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"